Sat Apr 27 15:00:08 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Apr 27 14:58:00 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2938

Sun Apr 21 01:54:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/Makefile (MAN): Add missing dwarf.3 and
	dwarf_add_AT_comp_dir.3 entries.
	Sent patch upstream as:
	https://sourceforge.net/apps/trac/elftoolchain/ticket/419
	* current-trunk/libdwarf/GNUmakefile.am (notrans_dist_man3_MANS):
	Likewise.

Sun Apr 21 00:14:18 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libelftc/GNUmakefile.am: Add missing man pages.  Don't prefix man
	pages with target name at install time.  Use $(LN_S) instead of cp for
	man page aliases.
	* libdwarf/GNUmakefile.am: Likewise.
	* libelf/GNUmakefile.am: Likewise.
	* ar/GNUmakefile.am: Use $(LN_S) instead of cp for man page aliases.

	* Makfile: use $(MAKE) instead of make.

Tue Apr  2 21:10:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Tue Apr  2 21:03:22 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2936

Sun Mar 24 20:37:25 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/common/elfdefinitions.h: Fix ARM relocation issues.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/417

Sun Mar 24 18:13:32 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	Provide pkg-config support:
	* current-trunk/libelf-elftoolchain.pc.in: Add.
	* current-trunk/libelftc-elftoolchain.pc.in: Add.
	* current-trunk/libdwarf-elftoolchain.pc.in: Add.
	* current-trunk/configure.ac (PKG_INSTALLDIR): Use when available,
	otherwise provide --with-pkgconfigdir configure option with
	$(libdir)/pkgconfig as default.